# memweave

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: BENCHMARK_PLAN.md  KNOWN_ISSUES.md  README.md  RESULTS.md  longmemeval_bench.py  multiseed_sweep.py  verify_milestone1.py
benchmarks/data/splits/: lme_stratified_split_seed0.json  lme_stratified_split_seed1.json  lme_stratified_split_seed2.json  lme_stratified_split_seed3.json  lme_stratified_split_seed42.json
benchmarks/final_results/: results_mw_cv_seed0_held_out_20260506_0834.jsonl  results_mw_cv_seed1_held_out_20260506_0834.jsonl  results_mw_cv_seed2_held_out_20260506_0834.jsonl  results_mw_cv_seed3_held_out_20260506_0834.jsonl  results_mw_cv_seed42_held_out_20260506_0834.jsonl  results_mw_ecr0.3_idf0.6_caatb0.2_held_out_20260505_1710.jsonl  summary_mw_cv_5seeds_20260506_0834.json
benchmarks/results/: results_mw_raw_dev_20260501_1727.jsonl  results_mw_raw_held_out_20260501_1753.jsonl
benchmarks/strategies/: __init__.py  caatb.py  entity_confidence_reranker.py  idf_keyword_boost.py
examples/: meeting_notes_agent.ipynb
examples/book_club/: book_club_demo.ipynb
memweave/: __init__.py  _progress.py  config.py  exceptions.py  py.typed  store.py  types.py
memweave/_internal/: hashing.py
memweave/chunking/: markdown.py
memweave/embedding/: cache.py  provider.py  vectors.py
memweave/flush/: memory_flush.py
memweave/search/: __init__.py  hybrid.py  keyword.py  mmr.py  postprocessor.py  query_expansion.py  strategy.py  temporal_decay.py  vector.py
memweave/storage/: files.py  schema.py  sqlite_store.py
memweave/sync/: watcher.py
tests/integration/: test_temporal_decay.py
tests/unit/: test_flush.py  test_search_temporal_decay.py
